SCR #522189 - fix: removed double scrollbar

--- a/src/modules/core/components/float-panels/styles/themes/_default.scss
+++ b/src/modules/core/components/float-panels/styles/themes/_default.scss
@@ -24,7 +24,6 @@ $baseClass: 'wlc-float-panels';
             background: var(--fp-backdrop-background);
             visibility: var(--fp-backdrop-visibility, hidden);
             transition: ef.get-value($themeDefault, transition);
-            overflow-y: ef.get-value($themeDefault, 'backdropOverflow');
         }
 
         &--open {
